--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,14 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+html {
+  scroll-behavior: smooth; /* Standard smooth scrolling */
+  -webkit-overflow-scrolling: touch; /* Enable momentum scrolling on Webkit browsers */
+}
+.menu-link:hover {
+  border-bottom: 1px solid white;  /* Visible white border on hover */
+}
+
 
 body {
   color: var(--foreground);
