--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,14 @@ html {
   border-bottom: 1px solid white;  /* Visible white border on hover */
 }
 
+.scrollArea {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+
+.scrollArea::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
 
 body {
   color: var(--foreground);
